# rustchain

./: .gitignore  README.md
architecture/: Cargo.toml
architecture/src/: main.rs
architecture/src/blockchain/: block.rs  blockchain.rs  mod.rs
architecture/src/blockchain_test/: block_test.rs  blockchain_test.rs  mod.rs
architecture/src/utils/: utils.rs
architecture/src/wallet/: mod.rs
blockchain-client/: Cargo.toml
blockchain-client/architecture/: Cargo.toml
blockchain-client/architecture/src/: lib.rs
blockchain-client/architecture/src/blockchain/: block.rs  blockchain.rs
blockchain-client/architecture/src/blockchain_test/: block_test.rs  blockchain_test.rs  mod.rs
blockchain-client/architecture/src/utils/: config.rs  utils.rs
blockchain-client/architecture/src/wallet/: mod.rs  transaction.rs  transaction_pool.rs  wallet.rs
blockchain-client/architecture/src/wallet_test/: mod.rs  transaction_pool_test.rs  transaction_test.rs  wallet_test.rs
blockchain-client/handle-errors/: Cargo.toml
blockchain-client/p2p/: Cargo.toml
blockchain-client/p2p/src/: lib.rs
blockchain-client/p2p/src/http_server/: mod.rs  routes.rs  server.rs
blockchain-client/p2p/src/p2p_server/: host.rs  mod.rs
blockchain-client/p2p/src/routes/: mod.rs  routes.rs  server.rs
blockchain-client/p2p/src/types/: dto.rs  mod.rs
blockchain-client/src/: main.rs
dokumentacija/: Q2_NA_04-05 kljucna - izdanje 1.odt  bibliography.bib  main.tex  zadatak.docx
