[package]
name = "architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
crypto = "0.5.1"
sha2 = "0.11.0-pre.3"
hex-literal = "0.4.1"
hex = "0.4.3"
ecdsa = "0.16.9"
rand = "0.8.5"
k256 = { version = "0.13.3", features = ["ecdsa"] }
