[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
architecture = { path = "../architecture", version = "0.1.0" }
warp = "0.3.7"
tokio = { version = "1.38.0", features = ["full"] }
http = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
libp2p = {version = "0.53.2", features = ["full"]}
url = "2.5.2"
pretty_env_logger = "0.5.0"
log = "0.4.22"
once_cell = "1.5"
serde_json = "1.0.119"
env_logger = "0.11.3"
tracing-subscriber = { version = "0.3.18" , features = ["env-filter"] }
futures = "0.3.30"
